<resources>
    <string name="app_name">Simple Music app</string>
    <string name="music">Music</string>
    <string name="artists">Artists</string>
    <string name="artist">Len Faki</string>
    <string name="albums">Albums</string>
    <string name="favorite">Favorite</string>
    <string name="play">Play</string>
    <string name="duration">8:11</string>
    <string name="start">0:00</string>
    <string name="title">B3X</string>
    <string name="menu">Menu</string>
    <string name="cover">Music cover</string>
    <string name="like">Like</string>
    <string name="next">Next</string>
    <string name="back">Previous</string>
    <string name="shuffle">Shuffle</string>
</resources>
