<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout_match"
    android:background="@drawable/back"
    android:padding="20dp"
    tools:context="com.example.android.simplemusicapp.MainActivity">

    <LinearLayout
        style="@style/Layout_match"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/music"
            style="@style/Main"
            android:text="@string/music" />

        <TextView
            android:id="@+id/albums"
            style="@style/Main"
            android:text="@string/albums" />

        <TextView
            android:id="@+id/favorite"
            style="@style/Main"
            android:text="@string/favorite" />
    </LinearLayout>
</ScrollView>
